# Attack-or-Defend

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_windows_msvc.bat  cards.db
docs/: Style.h
src/: AI.cpp  AI.h  Color.h  Console.cpp  Console.h  UI.cpp  UI.h  Utils.cpp  Utils.h  WindowsConsole.cpp  WindowsConsole.h  aodsystem.cpp  aodsystem.h  cards.cpp  cards.h  display.cpp  display.h  gamemain.cpp  main.cpp  os.h  player.cpp  player.h  user.h
src/gameplay/: ActionStatus.h  CardFactory.h  CardManager.cpp  CardManager.h  GameSystem.cpp  GameSystem.h  Player.cpp  Player.h  PlayerBot.cpp  PlayerBot.h
src/gameplay/card/: Card.cpp  Card.h  Card_TestCard.cpp  Card_TestCard.h  Card_ZXP4.cpp  Card_ZXP4.h
